--- a/src/App.scss
+++ b/src/App.scss
@@ -1,20 +1,29 @@
-$primary-color: #2cdb6a;
-$white-text: #fff;
-$bg-main: #000;
-$bg-second: #4a4a4a;
+@import "global";
 
 body {
     background-color: $bg-main;
     color: $white-text;
-    font-family: sans-serif;
+    font-family: $roboto-family;
 }
 
 nav {
+    font-family: $roboto-condensed-family;
     padding: 1em;
+    margin: 0 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
-
+    p{
+        font-family: $roboto-family;
+        font-weight: $medium;
+        b {
+            color: $primary-color;
+        }
+        img {
+            width: 30px;
+            margin-right: 10px;
+        }
+    }
     ul {
         list-style: none;
         display: flex;
@@ -28,11 +37,18 @@ nav {
         &:hover {
             color: $primary-color;
         }
+        .icon{
+            font-size: 1.5rem;
+            margin:0 0.5rem;
+        }
     }
     
     .currentRoute {
         color: $primary-color;
     }
+}
+header {
+    bottom: 150px;
 }
 
 footer {
