--- a/src/App.scss
+++ b/src/App.scss
@@ -15,7 +15,12 @@ nav {
     align-items: center;
     p{
         font-family: $roboto-family;
+        font-size: 1.5em;
         font-weight: $medium;
+        display: flex;
+        align-items: center;
+        gap: .5em;
+
         b {
             color: $primary-color;
         }
@@ -46,9 +51,79 @@ nav {
     .currentRoute {
         color: $primary-color;
     }
+
+    .submenuProductos {
+        position: relative;
+
+        &:hover {
+            color: $primary-color;
+        }
+
+        &:hover .listaProductos {
+            display: block;
+            color: $white-text;
+        }
+
+        .listaProductos {
+            display: none;
+            background-color: $bg-main;
+            width: 220px;
+            padding-top: 20px;
+            line-height: 2em;
+            position: absolute;
+            left: -10px;
+            z-index: 1;
+
+            li {
+                text-transform: uppercase;
+                padding: 0 10px;
+                height: 40px;
+                font-size: 1em;
+
+                display: flex;
+                align-items: center;
+
+                &:hover {
+                    background-color: $bg-second;
+                    color: $white-text;
+                }
+
+                a:hover {
+                    color: $white-text;
+                }
+            }
+        }
+    }
 }
 header {
     bottom: 150px;
+}
+
+.features {
+    background-color: $bg-second;
+    height: 300px;
+    padding: 40px;
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    align-items: center;
+    gap: 2em;
+
+    div {
+        text-align: center;
+        height: 100%;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 2em;
+    }
+
+    svg {
+        transform: scale(3);
+        color: $white-text;
+    }
 }
 
 footer {
