--- a/src/components/slider/Slider.scss
+++ b/src/components/slider/Slider.scss
@@ -19,6 +19,10 @@ b{
     opacity: 0;
     transform: translateX(-50%);
     transition: all .5s ease;
+
+    img {
+        object-fit: cover;
+    }
 }
 
 @media screen and (min-width: 600px) {
