--- a/src/components/slider/Slider.scss
+++ b/src/components/slider/Slider.scss
@@ -38,10 +38,13 @@ b{
 
 .content {
     position: absolute;
+    font-family: $roboto-family;
+    font-weight: $black;
+    font-size: 2rem;
     top:10rem;
     left: 5rem;
     opacity: 0;
-    width: 50%;
+    // width: 50%;
     text-transform: uppercase;
     animation: slide-up 1s ease 0.5s;
     animation-fill-mode: forwards;
@@ -66,7 +69,7 @@ b{
 }
 
 .content > * {
-    color: #fff;
+    color: $white-text;
     margin-bottom: 1rem;
 }
 
