--- a/src/App.scss
+++ b/src/App.scss
@@ -165,17 +165,28 @@ footer {
         align-items: center;
         gap: 1em;
         list-style: none;
-        // display: flex;
-        // flex-direction: row;
-        // justify-content: space-around;
+        
         li{
             text-align: center;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-        }
-        li > *{
-            padding: .5rem;
+            a{
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                color: inherit;
+                text-decoration: none;
+                .icon{
+                    font-size: 2rem;
+                }
+            }
+            a > *{
+                padding: .5rem;
+            }
+            a:hover{
+                color: $primary-color;
+            }
         }
     }
 }
