--- a/src/App.scss
+++ b/src/App.scss
@@ -74,7 +74,7 @@ nav {
             li {
                 text-transform: uppercase;
                 padding: 0 10px;
-                height: 40px;
+                height: 2em;
                 font-size: 1em;
 
                 display: flex;
@@ -130,6 +130,91 @@ header {
     svg {
         transform: scale(5);
         color: $white-text;
+    }
+}
+
+.destacados {
+    padding: 1em;
+
+    text-align: center;
+
+    h3 {
+        margin-bottom: 1em;
+    }
+}
+
+.cardDestacados {
+    width: 200px;
+    height: 300px;
+    padding: .2em;
+    background-color: $white-text;
+    color: $bg-main;
+    border-radius: 4px;
+    margin-bottom: 2em;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    &:hover a {
+        opacity: 1;
+    }
+
+    a {
+        display: none;
+        background-color: $bg-main;
+        border-radius: inherit;
+        height: 45px;
+        color: $white-text;
+        text-decoration: none;
+        font-weight: 700;
+        opacity: 0;
+
+        display: grid;
+        place-items: center;
+    }
+}
+
+.categorias {
+    padding: 1em;
+
+    h3 {
+        text-align: center;
+        margin-bottom: 1em;
+    }
+
+    .cardContainer {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        place-items: center;
+    }
+}
+
+
+.cardCategorias {
+    width: 80%;
+    height: 420px;
+    background-color: $bg-second;
+    border-radius: 4px;
+    border: 3px solid $white-text;
+
+    position: relative;
+
+    a {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+
+        background-color: $bg-main;
+        border-radius: inherit;
+        color: $white-text;
+        text-decoration: none;
+        font-weight: 500;
+        height: 60px;
+        width: 100%;
+
+        display: grid;
+        place-items: center;
     }
 }
 
