--- a/src/App.scss
+++ b/src/App.scss
@@ -125,7 +125,12 @@ header {
             font-family: $roboto-family;
             font-weight: $medium;
         }
+
+        &:nth-child(2), &:nth-child(3) {
+            border-left: 1px solid #fff2;
+        }
     }
+    
 
     svg {
         transform: scale(5);
@@ -134,6 +139,7 @@ header {
 }
 
 .destacados {
+    margin-top: 2em;
     padding: 1em;
 
     text-align: center;
@@ -143,7 +149,7 @@ header {
     }
 }
 
-.cardDestacados {
+.cardProductos {
     width: 200px;
     height: 300px;
     padding: .2em;
@@ -200,6 +206,10 @@ header {
 
     position: relative;
 
+    img {
+        width: 100%;
+    }
+
     a {
         position: absolute;
         bottom: 0;
@@ -209,6 +219,7 @@ header {
         border-radius: inherit;
         color: $white-text;
         text-decoration: none;
+        text-transform: uppercase;
         font-weight: 500;
         height: 60px;
         width: 100%;
