Agregué página de catálogo

--- a/src/global.scss
+++ b/src/global.scss
@@ -13,6 +13,7 @@ $black: 900;
 // Color Variables
 
 $primary-color: #2cdb6a;
+$secondary-color: #f9941d;
 $white-text: #fff;
 $bg-main: #000;
 $bg-second: #4a4a4a;
