--- a/src/App.scss
+++ b/src/App.scss
@@ -15,6 +15,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 999;
     p{
         font-family: $roboto-family;
         font-size: 1.5em;
@@ -141,9 +142,10 @@ header {
 }
 
 .destacados {
-    margin-top: 2em;
+    margin: 2em auto;
     padding: 1em;
-    width: 99%;
+    width: 100%;
+    overflow: hidden;
     text-align: center;
     h3 {
         margin-bottom: 1em;
@@ -199,18 +201,29 @@ header {
 
 
 .cardCategorias {
-    width: 80%;
-    height: 420px;
+    width: 18rem;
+    height: 30rem;
     background-color: $bg-second;
     border-radius: 4px;
-    border: 3px solid $white-text;
+    border: 0.5rem solid $white-text;
 
     position: relative;
 
     img {
         width: 100%;
         height: 100%;
+        z-index: 0;
+        position: relative;
     }
+    &:hover::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(to bottom, #2cdb69a9 0%, rgba(0, 0, 0, 0) 100%);
+        z-index: 1;}
 
     a {
         position: absolute;
@@ -228,6 +241,7 @@ header {
 
         display: grid;
         place-items: center;
+        z-index: 2;
     }
 }
 
