--- a/src/_catalogo.scss
+++ b/src/_catalogo.scss
@@ -106,9 +106,12 @@
             input, textarea {
                 background-color: $bg-main;
                 border: 1px solid $primary-color;
+                color: $white-text;
+                font-size: .75em;
                 resize: none;
                 border-radius: 5px;
-                line-height: 2.5;
+                line-height: 2;
+                padding: 0 1em;
             }
             textarea {
                 height: 150px;
