--- a/src/App.scss
+++ b/src/App.scss
@@ -228,7 +228,7 @@ header {
         left: 0;
         width: 100%;
         height: 100%;
-        background: linear-gradient(to bottom, #2cdb69a9 0%, rgba(0, 0, 0, 0) 100%);
+        background: linear-gradient(to bottom, #2cdb69 0%, rgba(0, 0, 0, 0) 100%);
         z-index: 1;}
 
     a {
@@ -251,6 +251,23 @@ header {
     }
 }
 
+.footer-brand{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: .5rem;
+    font-weight: $regular;
+    font-size: 1em;
+    img {
+        align-self: center;
+    }
+    .brand{
+        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-weight: $bold;
+        font-size: 1.3rem;
+    }
+}
 footer {
     min-height: 300px;
     width: 100%;
@@ -258,23 +275,6 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    .footer-brand{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: .5rem;
-        font-weight: $regular;
-        font-size: 1em;
-        img {
-            align-self: center;
-        }
-        .brand{
-            font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-            font-weight: $bold;
-            font-size: 1.3rem;
-        }
-    }
 
     ul {
         display: grid;
