avance en ventas

--- a/src/App.scss
+++ b/src/App.scss
@@ -187,6 +187,9 @@ header {
 
         display: grid;
         place-items: center;
+        &:hover{
+            color: #2cdb69;
+        }
     }
 }
 
