--- a/src/components/slider/Slider.scss
+++ b/src/components/slider/Slider.scss
@@ -26,9 +26,8 @@ b{
 }
 
 @media screen and (min-width: 600px) {
-    .slide img{
-        width: 100%;
-        height: 100%;
+    .fondo-con{
+        object-position: left;
     }
 }
 
@@ -66,6 +65,7 @@ b{
 @media screen and (max-width: 600px) {
     .content {
         width: 80%;
+        font-size: 15pt;
     }
 }
 
