--- a/src/_catalogo.scss
+++ b/src/_catalogo.scss
@@ -158,11 +158,13 @@
             width: 100%;
             height: 100%;
             background: linear-gradient(to top, rgba(44, 219, 100, 0.6) 0%, rgba(44, 219, 100, 0.18) 100%);
+            border-radius: 20px;
         }
         img {
             width: 100%;
             height: 100%;
             object-fit: cover;
+            border-radius: 20px;
         }
     }
     #brand-form{
