--- a/src/App.scss
+++ b/src/App.scss
@@ -14,7 +14,6 @@ body {
 nav {
     font-family: $roboto-condensed-family;
     padding: 1em;
-    margin: 0 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -104,7 +103,12 @@ nav {
     }
 }
 .navMobile {
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: $bg-main;
+    width: 100vw; 
+    margin-bottom: 72px;
 
     & > button {
         border: none;
@@ -122,7 +126,7 @@ nav {
     ul {
         position: absolute;
         top: 95%;
-        right: -1em;
+        right: 0;
         flex-direction: column;
         align-items: center;
         gap: 2em;
@@ -224,6 +228,9 @@ header {
                 border-top: 1px solid #fff2;
                 border-left: none;
             }
+            &:last-child {
+                padding-bottom: 1em;
+            }
         }
     }
 }
@@ -236,46 +243,6 @@ header {
     text-align: center;
     h3 {
         margin-bottom: 1em;
-    }
-}
-
-.cardProductos {
-    width: 180px;
-    height: 300px;
-    padding: .2em;
-    background-color: $white-text;
-    color: $bg-main;
-    text-align: center;
-    border-radius: 4px;
-    transform: scale(.95);
-    transition: transform 100ms ease-in-out;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
-    &:hover {
-        transform: scale(1.05);
-    }
-    &:hover a {
-        opacity: 1;
-    }
-
-    a {
-        display: none;
-        background-color: $bg-main;
-        border-radius: inherit;
-        height: 45px;
-        color: $white-text;
-        text-decoration: none;
-        font-weight: 700;
-        opacity: 0;
-
-        display: grid;
-        place-items: center;
-        &:hover{
-            color: #2cdb69;
-        }
     }
 }
 
