--- a/src/_catalogo.scss
+++ b/src/_catalogo.scss
@@ -113,20 +113,20 @@
         .inputContainer {
             display: flex;
             flex-direction: column;
-            gap: 10px;
+            gap: .5em;
+            margin-bottom: 1.2em;
 
             input, textarea {
-                background-color: $bg-main;
-                border: 1px solid $primary-color;
                 color: $white-text;
-                font-size: .75em;
+                font-size: 1em;
+                background-color: transparent;
+                border: 1px solid $primary-color;
+                border-radius: 4px;
                 resize: none;
-                border-radius: 5px;
-                line-height: 2;
-                padding: 0 1em;
+                padding: 10px;
             }
-            textarea {
-                height: 150px;
+            label {
+                font-size: .8em;
             }
         }
 
