--- a/src/_contacto.scss
+++ b/src/_contacto.scss
@@ -104,10 +104,11 @@
     p{margin: 22px;}
     a{
         text-decoration: none;
+        font-size: .7em;
         font-weight: $bold;
         background-color: $secondary-color;
         border-radius: 10vw;
-        padding: 12px;
+        padding: .4em 1.5em;
         color: $bg-main;
         &:hover{
             background-color: transparent;
