--- a/src/components/carousel/_cardDestacado.scss
+++ b/src/components/carousel/_cardDestacado.scss
@@ -5,7 +5,6 @@
   color: black;
   height: 16rem;
   width: 10rem;
-  margin-left: 1rem;
   padding: 0 1rem;
   padding-bottom: 2rem;
   display: flex;
@@ -16,9 +15,6 @@
   position: relative;
   &:hover img{
     transform: scale(1.05);
-  }
-  &:hover a {
-      opacity: 1;
   }
   img{
     width: 100%;
@@ -32,9 +28,7 @@
   }
   a{
     position: absolute;
-    opacity: 0;
     bottom: .5rem;
-    // left: 0;
     background-color: $bg-main;
     border-radius: inherit;
     color: $white-text;
@@ -53,4 +47,15 @@
 }
 .carouselContainerSlide{
   margin: 0 auto;
+}
+
+@media only screen and (min-width: 1024px) {
+  .cardDestacado {
+    a {
+      opacity: 0;
+    }
+    &:hover a {
+        opacity: 1;
+    }
+  }
 }
