--- a/src/_catalogo.scss
+++ b/src/_catalogo.scss
@@ -96,14 +96,14 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
     gap: 2em;
-
+    font-family: $roboto-family;
     padding: 2em;
 
     form {
         display: flex;
         flex-direction: column;
         gap: 1.2em;
-
+        
         padding: 1em;
 
         p {
@@ -158,13 +158,13 @@
             width: 100%;
             height: 100%;
             background: linear-gradient(to top, rgba(44, 219, 100, 0.6) 0%, rgba(44, 219, 100, 0.18) 100%);
-            border-radius: 20px;
+            border-radius: 30px;
         }
         img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            border-radius: 20px;
+            border-radius: 30px;
         }
     }
     #brand-form{
@@ -194,6 +194,10 @@
         padding: 1em;
         button{
             align-self: center;
+        }
+        form{
+            gap: .5em;
+            width: 80vw;
         }
     }
 }
