--- a/src/App.scss
+++ b/src/App.scss
@@ -688,6 +688,9 @@ footer {
 }
 
 @media only screen and (min-width: 1024px) {
+    header {
+        margin-top: 0;
+    }
     section:not(.features) {
         margin-top: 0;
     }
