se eleva footer en mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -651,6 +651,9 @@ footer {
     #nuestros_productos .calidad_precio_img{
         display: none;
     }
+    footer{
+        margin-bottom: 3rem;
+    }
 }
 @media only screen and (max-width: 768px) {
     .footer-iconos p{
