--- a/src/_contacto.scss
+++ b/src/_contacto.scss
@@ -73,10 +73,11 @@
             button {
                 background-color: $primary-color;
                 color: $bg-main;
-                font-weight: 600;
+                font-weight: 700;
+                text-transform: uppercase;
                 border: none;
                 border-radius: 25vh;
-                padding: .7em 2.5em;
+                padding: .7em 0;
                 cursor: pointer;
                 width: 100%;
             }
@@ -140,7 +141,7 @@
             .contactoFormulario {
                 grid-template-columns: 1fr 1fr;
                 button {
-                    width: 20%;
+                    width: 30%;
                 }
                 .contactoInfo {
                     display: unset;
